--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,32 +8,56 @@
     <link rel="stylesheet" href="css/gamer.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <!-- nav section starts -->
     <nav>
         <div class="nav-container">
             <div class="logo-container">
                 <img src="images/Frame.png" alt="">
-                <p ><span class="letter">G</span>amer</p>
+                <p><span class="letter">G</span>amer</p>
             </div>
             <div class="nav-item-container">
                 <a href="">About Us</a>
                 <a href="">Developers</a>
                 <div class="nav-icon">
                     <a href="">Follow Us On</a>
-                <span>
-                    <i class="fa-brands fa-youtube" style="color: red;"></i>
-                </span>
-                <span>
-                    <i class="fa-brands fa-tiktok"></i>
-                </span>
+                    <span>
+                        <i class="fa-brands fa-youtube" style="color: red;"></i>
+                    </span>
+                    <span>
+                        <i class="fa-brands fa-tiktok"></i>
+                    </span>
                 </div>
             </div>
         </div>
     </nav>
     <!-- nav sections ends -->
+
+    <!-- banner section starts here -->
+
+    <section class="banner-container">
+        <div class="banner-content">
+            <!-- <img src="./images/Group 14.png" alt=""> -->
+            <h4 class="banner-title1">Play Like The <br> <span class="banner-title2">G.O.A.T.</span></h4>
+            <div class="banner-description">
+
+            </div>
+            <div class="primary-btn">
+                <button>SIGN IN</button>
+            </div>
+            <div class="btn-2">
+                <button>Go Rogue</button>
+            </div>
+        </div>
+        <div class="banner-images">
+
+        </div>
+    </section>
+    <!-- banner section ends here -->
 </body>
+
 </html>
