banner section updated

--- a/index.html
+++ b/index.html
@@ -42,9 +42,26 @@
     <section class="banner-container">
         <div class="banner-content">
             <!-- <img src="./images/Group 14.png" alt=""> -->
-            <h4 class="banner-title1">Play Like The <br> <span class="banner-title2">G.O.A.T.</span></h4>
-            <div class="banner-description">
-
+            <p class="banner-title1">Play Like The <br> <span class="banner-title2">G.O.A.T.</span></p>
+            <div class="banner-icons">
+                <div class="banner-icon-desc">
+                    <span>
+                        <i class="fa-regular fa-circle-play"></i>
+                    </span>
+                    <p>1-Click instant play</p>
+                </div>
+                <div class="banner-icon-desc">
+                    <span>
+                        <i class="fa-solid fa-user-group"></i>
+                    </span>
+                    <p>No Download</p>
+                </div>
+            <div class="banner-icon-desc">
+                <span>
+                    <i class="fa-solid fa-download"></i>
+                </span>
+                <p>1000s of supported online games</p>
+            </div>
             </div>
             <div class="primary-btn">
                 <button>SIGN IN</button>
