banner section completed with responsive

--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
     <!-- nav sections ends -->
 
     <!-- banner section starts here -->
-
+ 
     <section class="banner-container">
         <div class="banner-content">
-            <!-- <img src="./images/Group 14.png" alt=""> -->
-            <p class="banner-title1">Play Like The <br> <span class="banner-title2">G.O.A.T.</span></p>
+                <p class="banner-title1">Play Like The <br> <span class="banner-title2">G.O.A.T.</span></p>
             <div class="banner-icons">
                 <div class="banner-icon-desc">
                     <span>
@@ -52,26 +51,29 @@
                 </div>
                 <div class="banner-icon-desc">
                     <span>
-                        <i class="fa-solid fa-user-group"></i>
+                        <i class="fa-solid fa-download"></i>
                     </span>
                     <p>No Download</p>
                 </div>
             <div class="banner-icon-desc">
                 <span>
-                    <i class="fa-solid fa-download"></i>
+                    <i class="fa-solid fa-user-group"></i>
                 </span>
                 <p>1000s of supported online games</p>
             </div>
             </div>
-            <div class="primary-btn">
-                <button>SIGN IN</button>
+            <div class="banner-btn">
+                <div>
+                    <button class="primary-btn">SIGN IN</button>
+                </div>
+                <div >
+                    <button class="btn-2">Go Rogue</button>
+                </div>
             </div>
-            <div class="btn-2">
-                <button>Go Rogue</button>
-            </div>
+            
         </div>
         <div class="banner-images">
-
+                <img src="images/Group 18.png" alt="">
         </div>
     </section>
     <!-- banner section ends here -->
