cart section added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,33 @@
         </div>
     </section>
     <!-- banner section ends here -->
+
+    <!-- cart section starts here -->
+    <section class="carts-container" >
+        
+        <p class="primary-title">Online Games <span class="shaded-title">Funny Videos</span> </p>
+        <p class="primary-desc">A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="grid-container">
+            <div class="single-grid">
+                <img src="images/Rectangle 4.png" alt="">
+                <p class="cart-desc">No Download. No Installs. Play games Instantly on Gamer.</p>
+            </div>
+            <div class="single-grid">
+                <img src="images/Rectangle 5.png" alt="">
+                <p class="cart-desc">Did you score?#unblockedgames #school</p>
+            </div>
+            <div class="single-grid">
+                <img src="images/Rectangle 7.png" alt="">
+                <p class="cart-desc">Breaking game records like OG</p>
+            </div>
+            <div class="single-grid">
+                <img src="images/Rectangle 6.png" alt="">
+                <p class="cart-desc">Busted gaming on school laptop, but you are still lit.</p>
+            </div>
+        </div>
+        
+        </section>
+        <!-- cart section ends here -->
 </body>
 
 </html>
