--- a/index.html
+++ b/index.html
@@ -110,20 +110,17 @@
     <!-- play section starts -->
     <section class="play-container">
         <div class="play-title">
-            <p class="primary-title"><span class="shaded-title">Play Instantly,</span> <br>No Downloads <br> No
+            <p class="play-primary-title"><span class="play-shaded-title">Play Instantly,</span> <br>No Downloads <br> No
                 Installs. </p>
-            <p class="primary-desc">Play games online for free without downloading. Just click the Play button and play
+            <p class="play-primary-desc">Play games online for free without downloading. Just click the Play button and play
                 instantly in your browser.</p>
 
         </div>
         <div class="play-img-container">
-            <div class="img1">
-                <img src="images/Rectangle 55.png" alt="">
-            </div>
-            <div class="img2">
-                <img src="images/Rectangle 66.png" alt="">
-            </div>
-
+                <img class="img-main" src="images/Rectangle 55.png" alt="">
+                <div class="overlay">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
         </div>
     </section>
     <!-- play section ends -->
@@ -187,13 +184,13 @@
         </div>
         <div class="footer-icons">
             <span>
-                <i class="fa-brands fa-facebook" style="color: blue;"></i>
+                <i class="fa-brands fa-facebook" style="color: #1877F2;"></i>
             </span>
             <span>
-                <i class="fa-brands fa-twitter" style="color: skyblue;"></i>
+                <i class="fa-brands fa-twitter" style="color: white;"></i>
             </span>
             <span>
-                <i class="fa-brands fa-youtube" style="color: red;"></i>
+                <i class="fa-brands fa-youtube" style="color: white;"></i>
             </span>
 
         </div>
