--- a/index.html
+++ b/index.html
@@ -88,18 +88,30 @@
         <div class="grid-container">
             <div class="single-grid">
                 <img src="images/Rectangle 4.png" alt="">
+                <div>
+                    Watch now
+                </div>
                 <p class="cart-desc">No Download. No Installs. Play games Instantly on Gamer.</p>
             </div>
             <div class="single-grid">
                 <img src="images/Rectangle 5.png" alt="">
+                <div>
+                    Watch now
+                </div>
                 <p class="cart-desc">Did you score?#unblockedgames #school</p>
             </div>
             <div class="single-grid">
                 <img src="images/Rectangle 7.png" alt="">
+                <div>
+                    Watch now
+                </div>
                 <p class="cart-desc">Breaking game records like OG</p>
             </div>
             <div class="single-grid">
                 <img src="images/Rectangle 6.png" alt="">
+                <div>
+                    Watch now
+                </div>
                 <p class="cart-desc">Busted gaming on school laptop, but you are still lit.</p>
             </div>
         </div>
